--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,14 @@ networks:
 
 services:
   site:
-    image: nginx:stable-alpine
+    build:
+      context: .
+      dockerfile: nginx.dockerfile
     container_name: nginx
     ports:
       - "8080:80"
     volumes:
-      - ./src:/var/www/html
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./src:/var/www/html:delegated
     depends_on:
       - php
       - mysql
@@ -41,22 +42,26 @@ services:
       dockerfile: php.dockerfile
     container_name: php
     volumes:
-      - ./src:/var/www/html
+      - ./src:/var/www/html:delegated
     ports:
       - "9000:9000"
     networks:
       - laravel
 
   composer:
-    image: composer:latest
+    build:
+      context: .
+      dockerfile: composer.dockerfile
     container_name: composer
     volumes:
       - ./src:/var/www/html
     working_dir: /var/www/html
     depends_on:
       - php
+    user: laravel
     networks:
       - laravel
+    entrypoint: ['composer', '--ignore-platform-reqs']
 
   npm:
     image: node:13.7
@@ -72,10 +77,11 @@ services:
       dockerfile: php.dockerfile
     container_name: artisan
     volumes:
-      - ./src:/var/www/html
+      - ./src:/var/www/html:delegated
     depends_on:
       - mysql
     working_dir: /var/www/html
+    user: laravel
     entrypoint: ['php', '/var/www/html/artisan']
     networks:
       - laravel
